# minity

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  build-libs.cmd  fetch-libs.cmd  imgui.ini  linux-build-libs.sh  linux-fetch-libs.sh  minity-debug.cmd  minity-release.cmd  minity.cmd  vcpkg.json
res/model/: base-fs.glsl  base-vs.glsl  model-base-fs.glsl  model-base-gs.glsl  model-base-vs.glsl  model-light-fs.glsl  model-light-vs.glsl
res/raytrace/: raytrace-fs.glsl  raytrace-vs.glsl
src/: BoundingBoxRenderer.cpp  BoundingBoxRenderer.h  CMakeLists.txt  CameraInteractor.cpp  CameraInteractor.h  Interactor.cpp  Interactor.h  Model.cpp  Model.h  ModelRenderer.cpp  ModelRenderer.h  RaytraceRenderer.cpp  RaytraceRenderer.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Viewer.cpp  Viewer.h  main.cpp  viewer.cpp
